# apiovnia

./: .gitignore  CLAUDE.md  LICENSE  README.md  instruction.md  plan.md  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml  release.yml
apiovnia-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apiovnia-app/src/: App.svelte  app.css  main.ts  vite-env.d.ts
apiovnia-app/src-tauri/: Cargo.toml  tauri.conf.json
apiovnia-app/src-tauri/capabilities/: default.json
apiovnia-app/src-tauri/crates/apiovnia-core/: Cargo.toml
apiovnia-app/src-tauri/crates/apiovnia-core/src/: graphql.rs  ids.rs  interpolate.rs  lib.rs  model.rs  resolver.rs  time.rs
apiovnia-app/src-tauri/crates/apiovnia-core/src/snippets/: curl.rs  httpie.rs  javascript.rs  mod.rs  powershell.rs  python.rs
apiovnia-app/src-tauri/crates/apiovnia-crypto/: Cargo.toml
apiovnia-app/src-tauri/crates/apiovnia-crypto/src/: lib.rs  password_policy.rs
apiovnia-app/src-tauri/crates/apiovnia-http/: Cargo.toml
apiovnia-app/src-tauri/crates/apiovnia-http/src/: error.rs  executor.rs  lib.rs  result.rs
apiovnia-app/src-tauri/crates/apiovnia-http/tests/: redirect_headers.rs
apiovnia-app/src-tauri/crates/apiovnia-openapi/: Cargo.toml
apiovnia-app/src-tauri/crates/apiovnia-openapi/src/: export.rs  import.rs  lib.rs  redact.rs
apiovnia-app/src-tauri/crates/apiovnia-openapi/tests/: petstore_sample.yaml  real_petstore.rs
apiovnia-app/src-tauri/crates/apiovnia-storage/: Cargo.toml
apiovnia-app/src-tauri/crates/apiovnia-storage/migrations/: 0001_init.sql  0002_history_full.sql
apiovnia-app/src-tauri/crates/apiovnia-storage/src/: db.rs  error.rs  lib.rs
apiovnia-app/src-tauri/crates/apiovnia-storage/src/repos/: collections.rs  env_variables.rs  environments.rs  history.rs  mod.rs  overrides.rs  projects.rs  requests.rs
apiovnia-app/src-tauri/crates/apiovnia-storage/tests/: crud.rs
apiovnia-app/src-tauri/icons/: icon.icns
apiovnia-app/src-tauri/src/: app_state.rs  lib.rs  main.rs
apiovnia-app/src-tauri/src/commands/: collections.rs  crypto.rs  environments.rs  execution.rs  mod.rs  openapi.rs  overrides.rs  projects.rs  requests.rs
apiovnia-app/src/lib/: keymap.ts
apiovnia-app/src/lib/api/: ipc.ts
apiovnia-app/src/lib/components/: ContextMenu.svelte  Icon.svelte  MethodBadge.svelte  OnboardingOverlay.svelte  OpLogHost.svelte  ToastHost.svelte  icons.ts
apiovnia-app/src/lib/components/layout/: Resizer.svelte  ThreePanelLayout.svelte  TitleBar.svelte
apiovnia-app/src/lib/components/modals/: CommandPalette.svelte  ConfirmModal.svelte  DialogsHost.svelte  EnvManageModal.svelte  PromptModal.svelte  SetEnvPasswordModal.svelte  SettingsModal.svelte  UnlockEnvModal.svelte
apiovnia-app/src/lib/components/panels/: DetailPanel.svelte  HistoryPanel.svelte  ProjectsPanel.svelte  RequestsPanel.svelte
apiovnia-app/src/lib/components/request/: EnvSelector.svelte  GraphQlEditor.svelte  KeyValueTable.svelte  MultipartTable.svelte  UrlBar.svelte
apiovnia-app/src/lib/components/request/tabs/: AuthTab.svelte  BodyTab.svelte  EnvOverridesTab.svelte  HeadersTab.svelte  ParamsTab.svelte
apiovnia-app/src/lib/components/response/: HeadersGrid.svelte  JsonView.svelte  ResponseHeader.svelte  ResponseHeaders.svelte  ResponsePretty.svelte  ResponseRaw.svelte  ResponseSent.svelte  ResponseViewer.svelte  format.ts
apiovnia-app/src/lib/components/ui/: CodeMirrorEditor.svelte  Popover.svelte  Segment.svelte  Select.svelte  Tabs.svelte
apiovnia-app/src/lib/stores/: app.svelte.ts  dialogs.svelte.ts  panels.svelte.ts  settings.svelte.ts
apiovnia-app/src/lib/types/: domain.ts
apiovnia-site/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
apiovnia-site/src/components/: AppShellMock.astro  FeatureCard.astro  Footer.astro  Header.astro  Logo.astro  ScreenshotSlot.astro
apiovnia-site/src/layouts/: BaseLayout.astro
apiovnia-site/src/pages/: download.astro  features.astro  index.astro  roadmap.astro
apiovnia-site/src/pages/docs/: index.astro
apiovnia-site/src/styles/: global.css  tokens.css
design_artifacts/: Apiovnia.html  App Icon - Honeycomb Set.html  app.jsx  artifact-env.jsx  artifact-response.jsx  artifact-shell.jsx  artifact-unlock.jsx  json-view.jsx  shared.jsx  tokens.css
design_artifacts/icons/: README.md
design_artifacts/icons/linux/: apiovnia.desktop
