[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Sebastian Opałczyński"]
rust-version = "1.95"

[workspace.dependencies]
# Internal crates
apiovnia-core = { path = "crates/apiovnia-core" }
apiovnia-storage = { path = "crates/apiovnia-storage" }
apiovnia-http = { path = "crates/apiovnia-http" }
apiovnia-crypto = { path = "crates/apiovnia-crypto" }
apiovnia-openapi = { path = "crates/apiovnia-openapi" }

# Common runtime
serde = { version = "1", features = ["derive"] }
# `preserve_order` swaps the inner map for IndexMap so JSON object keys
# round-trip in their original order — needed by Python `requests` /
# HTTPie / JS / PowerShell snippets so the rendered body matches what
# the user typed, not an alphabetical re-sort.
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Domain-specific (used by individual crates / phases — pinned here so we
# don't bump versions in five places)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "stream",
    "multipart",
] }
url = "2"
mime = "0.3"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
oas3 = { version = "0.16", features = ["yaml-spec"] }
# Dropbox-style password strength estimator: scores 0..=4 based on dictionaries,
# l33t substitutions, keyboard walks, dates. Drives the master-password meter.
zxcvbn = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# ----------------------------------------------------------------------------
# apiovnia-tauri — the binary. Thin layer that wires the Tauri runtime to the
# domain crates and exposes the IPC commands. No business logic here.
# ----------------------------------------------------------------------------

[package]
name = "apiovnia-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Apiovnia desktop app — Tauri runtime + IPC layer"

[lib]
# `_lib` suffix avoids the bin/lib name collision on Windows
# (see https://github.com/rust-lang/cargo/issues/8519)
name = "apiovnia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
apiovnia-core.workspace = true
apiovnia-storage.workspace = true
apiovnia-http.workspace = true
apiovnia-crypto.workspace = true
apiovnia-openapi.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true

[lints]
workspace = true
