[package]
name = "apiovnia-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Apiovnia — Argon2id KDF + AES-256-GCM secret sealing."

[dependencies]
serde.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
zeroize.workspace = true
rand.workspace = true
base64.workspace = true

[lints]
workspace = true
